# cetplugin

./: CMakeLists.txt  Dockerfile
cetlib/: BasicPluginFactory.cc  BasicPluginFactory.h  LibraryManager.cc  LibraryManager.h  PluginFactory.h  compiler_macros.h  split.h
cmake/: cetlibConfig.cmake.in
